// =======================================
// AIRNAV DATABASE SCHEMA
// Generated: 14 Januari 2026
// Copy & Paste ke: https://dbdiagram.io
// =======================================

// =======================================
// USERS & AUTH
// =======================================

Table users {
  id integer [pk, increment]
  name varchar [not null]
  email varchar [unique, not null]
  role varchar [not null, note: 'admin, cns, support, manager, gm']
  password varchar [null, note: 'Null before activation']
  is_active boolean [default: true]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [note: 'Soft delete']

  created_by integer [null, note: 'User ID who created']
  updated_by integer [null, note: 'User ID who updated']
  deleted_by integer [null, note: 'User ID who deleted']
  
  Indexes {
    email [unique]
    role
    is_active
  }
}

Table account_tokens {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  token varchar [unique, not null, note: 'Format: ABC-XYZ123']
  type varchar [not null, note: 'activation, reset_password']
  is_used boolean [default: false]
  expired_at timestamp [not null, note: 'Default: +7 days']

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    token [unique]
    (user_id, type)
    expired_at
  }
}

// =======================================
// EMPLOYEE
// =======================================

Table employees {
  id integer [pk, increment]
  user_id integer [not null, unique, ref: > users.id]
  employee_type varchar [not null, note: 'CNS, SUPPORT, MANAGER']
  is_active boolean [default: true]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    user_id [unique]
    employee_type
    is_active
  }
}

// =======================================
// ROSTERING
// =======================================

Table roster_periods {
  id integer [pk, increment]
  month integer [not null, note: '1-12']
  year integer [not null, note: 'e.g. 2026']
  status varchar [default: 'draft', note: 'draft, published']

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    (month, year) [unique, note: 'One roster per month/year']
    status
  }
}

Table roster_days {
  id integer [pk, increment]
  roster_period_id integer [not null, ref: > roster_periods.id]
  work_date date [not null]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    roster_period_id
    work_date
    (roster_period_id, work_date)
  }
}

Table shifts {
  id integer [pk, increment]
  name varchar [not null, note: 'pagi, siang, malam']

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    name [unique]
  }
}

Table shift_assignments {
  id integer [pk, increment]
  roster_day_id integer [not null, ref: > roster_days.id]
  shift_id integer [not null, ref: > shifts.id]
  employee_id integer [not null, ref: > employees.id]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    roster_day_id
    shift_id
    employee_id
    (roster_day_id, shift_id, employee_id) [unique, note: 'Prevent duplicate assignment']
  }
  
  Note: '''
  Business Rules:
  - Minimum 4 CNS per shift
  - Minimum 2 SUPPORT per shift
  '''
}

Table manager_duties {
  id integer [pk, increment]
  roster_day_id integer [not null, ref: > roster_days.id]
  employee_id integer [not null, ref: > employees.id]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    roster_day_id
    employee_id
    (roster_day_id, employee_id) [unique, note: 'One manager per day per employee']
  }
  
  Note: 'Minimum 1 manager per day'
}

// =======================================
// SHIFT REQUEST & MAILBOX
// =======================================

Table shift_requests {
  id integer [pk, increment]
  requester_employee_id integer [not null, ref: > employees.id]
  target_employee_id integer [not null, ref: > employees.id]
  from_roster_day_id integer [not null, ref: > roster_days.id]
  to_roster_day_id integer [not null, ref: > roster_days.id]
  shift_id integer [not null, ref: > shifts.id]
  reason text [null]
  status varchar [default: 'pending', note: 'pending, approved, rejected']

  approved_by_target boolean [default: false]
  approved_by_from_manager boolean [default: false]
  approved_by_to_manager boolean [default: false]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp

  created_by integer [null]
  updated_by integer [null]
  deleted_by integer [null]
  
  Indexes {
    requester_employee_id
    target_employee_id
    status
    (from_roster_day_id, to_roster_day_id)
  }
  
  Note: '''
  Approval Flow:
  1. Target employee approves
  2. From-day manager approves
  3. To-day manager approves
  Status changes to 'approved' when all three approve
  '''
}

Table notifications {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  title varchar [not null]
  message text [not null]
  is_read boolean [default: false]

  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  
  Indexes {
    user_id
    is_read
    created_at
  }
}

// =======================================
// ACTIVITY LOG
// =======================================

Table activity_logs {
  id integer [pk, increment]
  user_id integer [null, ref: > users.id]
  action varchar [not null, note: 'create, update, delete, login, logout, etc']
  module varchar [not null, note: 'user, roster, shift_request, auth, etc']
  reference_id integer [null, note: 'ID of related record']
  description text [null]

  created_at timestamp [not null]
  
  Indexes {
    user_id
    action
    module
    reference_id
    created_at
  }
  
  Note: 'Audit trail - no updates or deletes allowed'
}

// =======================================
// RELATIONSHIPS SUMMARY
// =======================================

// User -> AccountToken (1:N)
// User -> Employee (1:1)
// User -> Notification (1:N)
// User -> ActivityLog (1:N)

// RosterPeriod -> RosterDay (1:N)
// RosterDay -> ShiftAssignment (1:N)
// RosterDay -> ManagerDuty (1:N)
// RosterDay -> ShiftRequest (1:N as from/to)

// Shift -> ShiftAssignment (1:N)
// Shift -> ShiftRequest (1:N)

// Employee -> ShiftAssignment (1:N)
// Employee -> ManagerDuty (1:N)
// Employee -> ShiftRequest (1:N as requester/target)

// =======================================
// NOTES
// =======================================

Note database_info {
  '''
  # AIRNAV Database Schema
  
  **Version:** 1.0.0
  **Database:** PostgreSQL
  **Last Updated:** 14 Januari 2026
  
  ## Features
  - ✅ Role-based access control
  - ✅ Soft deletes on all major tables
  - ✅ Audit trail (created_by, updated_by, deleted_by)
  - ✅ Token-based activation/reset
  - ✅ Multi-level approval workflow
  - ✅ Activity logging
  
  ## Business Rules
  - Minimum 4 CNS per shift
  - Minimum 2 SUPPORT per shift
  - Minimum 1 MANAGER per day
  - Unique roster period (month + year)
  - Token expires in 7 days
  - Multi-level approval for shift requests
  
  ## Security
  - Password hashing (Bcrypt)
  - API authentication (Laravel Sanctum)
  - Role-based authorization
  - Audit logging for all actions
  '''
}
